******************************************
*  Social Networks Visualiser (SocNetV)  *
******************************************

ChangeLog:

Version 0.51 - Feb 16 2009
Codename: "Maria"
------------------------------
- Fixed serious bug in DistanceMatrix method, affecting centralities and layout. 
- Fixed debug messages output default status to false, so that SocNetV is more responsive.


Version 0.50 - Feb 13 2009
Codename: "Recession (or the ballad of the deranged Greek statesmen)"
------------------------------
-'Small World' random network creation (Watts and Strogatz model).
-Clustering Coefficient calculation. 
-Average Graph Distance (shortest path length) calculation. 
-Nodes can be linked to themselves with nice bezier curves.
-Negative and decimal edge weights are now fully supported.
-Dashed lines are nicely used to signify negative edge weights. 
-Export current network to PDF with one click.
-Number and label colors are editable.
-Fixed number and label font size problem.
-Fixed PNG and BMP export regression.
-Fixed Printing regression. Printing is OK now. 
-New program logo and icon.
-Icon for Windows executable.
-Code cleanup (no more compile warnings) and minor memory optimisations.
-User messages/warnings and menu icons update.




Version 0.49 - Jan 13 2009
Codename: "Alexis Grigoropoulos (R.I.P.)"
------------------------------
-Weight numbers can be displayed over links.
-DL network format initial support.
-Floating point edge weights are now supported...
-Bug fix: Show correct new node number instead of %i
-Bug fix: Zoom while rotate works (thanks Andre!).
-Bug fix: No longer BFS crashes. SocNetV is more reliable.
-Bug fix: Changed shortcut of OutDegree to Ctrl+1.
-Added GraphML loading


Version 0.48 - Sep 30 2008
Codename: "Road to nowhere?"
------------------------------
--Erdos-Renyi random network creation.
--Removing symmetric edges, now asks what direction to remove.
--New layout method: node sizes according to their indegrees.