@@ -5,7 +5,7 @@
 <div class="footer">
 <table>
   <tr>
-<td> <p class="footer">SocNetV ver. 0.51 | March 2009 </p></td>
+<td> <p class="footer">SocNetV ver. 0.51 | February 2008 </p></td>
 
 <td> <p class="footer">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p> </td>
 <td> <p class="footer">&nbsp;</p> </td>
