@@ -1,6 +1,10 @@
 DL N = 5 FORMAT = FULLMATRIX 
 LABELS: 
-1,2,3,4,5
+1
+2
+3
+4
+5
 DATA: 
 0 1 0 0 0
 0 0 1 0 0
