@@ -9,6 +9,7 @@ Codename: "Maria"
 ------------------------------
 - Fixed serious bug in DistanceMatrix method, affecting centralities and layout. 
 - Fixed debug messages output default status to false, so that SocNetV is more responsive.
+- Officially added  DL (Data Language) file format support. This is UCINETs FULMATRIX mode.  
 
 
 Version 0.50 - Feb 13 2009
